[gd_scene load_steps=9 format=3 uid="uid://cisq43ihn24au"]

[ext_resource type="Script" path="res://scenes/interactable/locked_door_interactable.gd" id="1_xaji0"]
[ext_resource type="PackedScene" uid="uid://drvbcakpp4jy1" path="res://scenes/components/actor_component.tscn" id="2_x57yu"]
[ext_resource type="Texture2D" uid="uid://bby0xkcgtf6m5" path="res://assets/sprites/interactables/door.png" id="3_uv10f"]
[ext_resource type="PackedScene" uid="uid://kg4pyh5cjrlb" path="res://scenes/ui/interactable_dialog.tscn" id="4_m51sx"]
[ext_resource type="PackedScene" uid="uid://cmipc60fogsco" path="res://scenes/proto/lockpicking_test.tscn" id="5_4xg8p"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_47ffp"]
radius = 51.0
height = 106.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ssynx"]
size = Vector2(34, 98)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_lbedw"]
polygon = PackedVector2Array(-1, 4, -1, 49, 1, 49, 1, -48, -1, -48)

[node name="LockedDoorInteractable" type="Node2D" node_paths=PackedStringArray("lockpicking", "actor")]
script = ExtResource("1_xaji0")
lockpicking = NodePath("LockpickingTest")
actor = NodePath("Actor")

[node name="Actor" parent="." instance=ExtResource("2_x57yu")]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_47ffp")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_ssynx")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_uv10f")
metadata/_edit_lock_ = true

[node name="InteractableDialog" parent="." instance=ExtResource("4_m51sx")]
visible = false
offset_left = -50.0
offset_top = -93.0
offset_right = -50.0
offset_bottom = -93.0

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_lbedw")

[node name="LockpickingTest" parent="." instance=ExtResource("5_4xg8p")]
visible = false

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
